fix spacing in credit text

--- a/testimonial/css/style.css
+++ b/testimonial/css/style.css
@@ -95,3 +95,7 @@ body {
   font-weight: bold;
 }
 
+.credit-link {
+  margin-left: 4px;
+}
+
